--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Swap | Serum",
-  "name": "Swap | Serum",
+  "short_name": "DoceSwap | Serum",
+  "name": "DoceSwap | Serum",
   "icons": [
     {
       "src": "icon.ico",
